<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#85EAE7E7"
    >

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        android:text="@string/ingNombre"
        android:padding="10dp"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        android:text="@string/ingEmail"
        android:padding="10dp"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/logout"
        android:text="@string/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:visibility="gone"
        android:id="@+id/FetchResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white" android:padding="10dp"
        android:textSize="20sp"
        />
    <Button
        android:id="@+id/fetchProfile"
        android:text="@string/serUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>